--- a/src/components/view/page/cart-view/cart-view.module.scss
+++ b/src/components/view/page/cart-view/cart-view.module.scss
@@ -21,7 +21,6 @@
     align-items: center;
     gap: 1rem;
     padding: 1rem;
-    width: 98%;
   }
 
   @media screen and (max-width: 800px) {
@@ -267,6 +266,7 @@
     color: white;
     font-size: 3rem;
     margin: 1rem;
+    text-align: center;
   }
 
   &__first-text,
@@ -274,6 +274,7 @@
     color: white;
     font-size: 2rem;
     margin: 1.5rem;
+    text-align: center;
   }
 
   &__row-image {
